--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ name = "pypi"
 requests = "*"
 python-linkedin = "*"
 linkedin-scraper = "*"
+selenium = "*"
+"beautifulsoup4" = "*"
+"html5lib" = "*"
 
 
 [dev-packages]
